--- a/A.tex
+++ b/A.tex
@@ -32,7 +32,7 @@ There are multiple challenges to develop safe and effective closed-loop medical 
 \subsection{Closed-loop Interactions with Complex Physiology}
 When using open-loop medical devices, the diagnosis and therapy decisions are made by medical professionals, who have expert knowledge of human physiology. Therefore they are able to identify adverse health conditions and adjust the therapy accordingly. On the other hand, closed-loop medical devices have to make both the diagnosis and therapy decisions on their own. The domain expertise required to make those decisions has to be programmed into the device. It is impossible to encode all the knowledge of human physiology into the device. Therefore, for unanticipated physiological conditions when the appropriate response has not been programmed into the device, the device may deliver inappropriate therapy which can cause adverse effect on patient's health. 
 
-Technological development of materials, sensors, embedded computing, energy storage, communications and packaging usher new closed-loop therapies (e.g. deep brain stimulation). While the spectrum of closed-loop interactions between the device and the human physiology may not be fully understood, the challenge is to ensure the device never drives the patient into an adverse state. Furthermore, even with well-understood behaviors, with the incremental addition of new therapies in legacy devices (e.g. cardiac rhythm therapy), may result in inadvertent and conflicted behavior ending up with inappropriate and unsafe operation. In later chapters we will describe examples in which well-understood behaviors trigger unidentified inappropriate therapy by implantable cardiac devices.
+Technological development of materials, sensors, embedded computing, energy storage, communications and packaging usher new closed-loop therapies (e.g. deep brain stimulation). While the spectrum of closed-loop interactions between the device and the human physiology may not be fully understood, the challenge is to ensure the device never drives the patient into an adverse state. Furthermore, even with well-understood behaviors, with the incremental addition of new therapies in legacy devices (e.g. cardiac rhythm therapy), may result in inadvertent and conflicted behavior ending up with inappropriate and unsafe operation. 
 
 \subsection{Limited Diagnostic and Therapeutic Functions}
 One fundamental rationale behind closed-loop medical devices is to enable the patients to live their normal lives without the dependance of cumbersome medical devices and with minimal physician supervision. In fact, a large number of closed-loop medical devices are autonomous implantable devices. As a result, the sensing and therapy capabilities of the devices are limited, in order to minimize power consumption, heat dissipation and invasiveness. Limited sensing capabilities may cause misdiagnosis as the device may be unable to distinguish the source between two sensed signals from different conditions that now seem similar and result inappropriate therapy. Due to limited therapeutic capabilities, there exists sub-optimal physiological conditions that are untreatable. The device may even trigger the conditions into less optimal conditions. In later chapters we will describe examples in which an untreatable condition is deteriorated into an adverse condition due to device interactions.
