--- a/IEEE/bibliography.bib
+++ b/IEEE/bibliography.bib
@@ -15,6 +15,11 @@ number = {4},
 pages = {486--489},
 year = {1982},
 }
+@article{recall_rep,
+	Author = {US FDA},
+	Journal = {Center for Devices and Radiological Health},
+	Title = {Medical Device Recall Report - FY2003 to FY2012},
+	Year = {2012}}
 @article {eletro_mechanical,
 author = {Rossi, Simone and Ruiz-Baier, Ricardo and Pavarino, Luca F. and Quarteroni, Alfio},
 title = {Active strain and activation models in cardiac electromechanics},
