--- a/A.tex
+++ b/A.tex
@@ -70,9 +70,9 @@ In safety-critical industries such as automotive electronics, avionics and nucle
 
 Risk management is a core activity throughout the software development life cycle. ISO 14971 is specified for the application of risk management to medical devices. In addition, for each risk management activity of ISO 14971, ISO 80002-1 provides additional guidelines for the software component, which highlights and explains approaches to assuring that software safety is adequately addressed.
 
-While the above standards and several others provide guidelines to ensuring software safety they do so in an informal or ad hoc manner with a focus on the rigorousness of the design process rather than on quantative evaluation on the closed-loop system with the physiological system (or a model) and the feedback to and from the device. Furthermore, there is a separation of concerns where the \emph{regulatory perspective} is on the overall safety of the device meeting its diagnostic and therapeutic requirements within its environment (e.g. pacemaker inside the body and connected with the heart tissue), the \emph{software standards' perspective} is on the device meeting its specifications (e.g. if the pacemaker does not sense an event within a certain interval, then pace the heart). While the device may respond appropriately to the sensed input, we also need to establish that the device never drives the patient to an adverse condition. As the regulatory perspective requires closed-loop safety and the device software's specifications are largely evaluated with open-loop ``tape tests" of pre-recorded signals, with no physiological interaction, this introduces a safety gap.  So a device may meet its software specifications but that does not necessarily ensure it meets the physiological safety requirements. 
+%While the above standards and several others provide guidelines to ensuring software safety they do so in an informal or ad hoc manner with a focus on the rigorousness of the design process rather than on quantitative evaluation on the closed-loop system with the physiological system (or a model) and the feedback to and from the device. Furthermore, there is a separation of concerns where the \emph{regulatory perspective} is on the overall safety of the device meeting its diagnostic and therapeutic requirements within its environment (e.g. pacemaker inside the body and connected with the heart tissue), the \emph{software standards' perspective} is on the device meeting its specifications (e.g. if the pacemaker does not sense an event within a certain interval, then pace the heart). While the device may respond appropriately to the sensed input, we also need to establish that the device never drives the patient to an adverse condition. As the regulatory perspective requires closed-loop safety and the device software's specifications are largely evaluated with open-loop ``tape tests" of pre-recorded signals, with no physiological interaction, this introduces a safety gap.  So a device may meet its software specifications but that does not necessarily ensure it meets the physiological safety requirements. 
 
-\textbf{To address this safety gap, new approaches for closed-loop verification, validation and testing of the device within the physiological context are needed - which is the primary focus of this article.}
+
 %The history of the FDA is a reactionary one, where each stage of evolution was in response to a major healthcare tragedy. 
 \begin{figure}[t]
 		\centering
@@ -81,9 +81,11 @@ While the above standards and several others provide guidelines to ensuring soft
 		\label{fig:risks}
 \end{figure}
 \subsection{Risk Management Challenges of Closed-loop Systems}
-While it is not normally possible to develop a device that is safe with a probability of 100\% under all physiological and operating conditions, approaching the problem along the lines of risk analysis, risk evaluation and risk control helps better address a ``designed-for-safety" mindset. Fault Tree Analysis (FTA) is a common tool in risk analysis in which hazards of the system are first identified and the possible causes of the hazards are analyzed until the initial faults are reached. \figref{risks}.(a) demonstrate an example fault tree for automobile. FTA is very good at showing how resistant a system is to single or multiple initiating faults. It is not good at finding all possible initiating faults since causes are conjectured and analyzed manually. 
+While it is not normally possible to develop a device that is safe with a probability of 100\% under all physiological and operating conditions, approaching the problem along the lines of risk analysis, risk evaluation and risk control helps better address a ``designed-for-safety" mindset. Fault Tree Analysis (FTA) is a common tool in risk analysis in which hazards of the system are first identified and the possible causes of the hazards are analyzed until the initial faults are reached. \figref{risks}.(a) demonstrate an example fault tree for automobile. %FTA is very good at showing how resistant a system is to single or multiple initiating faults. It is not good at finding all possible initiating faults since causes are conjectured and analyzed manually. 
 
 In closed-loop medical devices, there may exist interactions between the device and the patient that can cause certain hazard, but are unknown due to limits in physiological knowledge, behavior not captured in patient trials and the separation of the software development teams and the medical domain experts. \figref{risks}.(b) demonstrate a fault tree for a hazard of implantable pacemaker. There are several causes for undesirable fast ventricular rate. The well-understood cause is the intrinsic ventricular tachycardia (solid line). However, with pacemaker implanted, new mechanisms to cause hazard are introduced into the closed-loop system, as illustrated by the two branches with dotted lines. These two branches were not identified during the initial fault tree analysis, and were only identified after the devices have been released into the market, causing unnecessary adverse effects to the patients \cite{ELT}. Risks identified at this late stage are also more costly to fix, increasing the cost for device development. 
+
+
 \begin{figure}[t]
 		\centering
 		\includegraphics[width=\textwidth]{figs/risk_analysis.pdf}
@@ -91,10 +93,12 @@ In closed-loop medical devices, there may exist interactions between the device 
 		\label{fig:risk_ana}
 \end{figure}
 
-After the fault tree has been constructed, probabilities for the initial faults are analyzed bottom up to calculate the probability of each hazard. The technique is called Failure Mode and Effects Analysis (FMEA). Then the risks are evaluated by assigning risk index to each hazard according to their occurrence and severity (\figref{risk_ana}). After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. The risks are then be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process. FMEA is good at exhaustively cataloging initiating faults, and identifying their local effects. It is not good at examining multiple failures or their effects at a system level.
+After the fault tree has been constructed, probabilities for the initial faults are analyzed bottom up to calculate the probability of each hazard. The technique is called Failure Mode and Effects Analysis (FMEA). Then the risks are evaluated by assigning risk index to each hazard according to their occurrence and severity (\figref{risk_ana}). After the risks are evaluated, different activities are required to mitigate the risks according to the risk index. The risks are then be re-evaluated to calculate the residual risk and analyze the risk/benefit. This is part of the risk control process. %FMEA is good at exhaustively cataloging initiating faults, and identifying their local effects. It is not good at examining multiple failures or their effects at a system level.
 
 \subsection{Pre-Market Evaluation with Clinical Trials}
 Regardless of how rigorous the risk management and the device development process are, the devices have to be able to achieve their design goal on the real patient, which can only be evaluated within its physiological environment. Devices that have high risk factors, including the closed-loop medical devices, are required to submit clinical evidence for their safety and efficacy, often in form of clinical trials. In clinical trials the devices are used on a preselected population of patients following carefully-designed protocols. The goal of a medical trial, in part, is  to obtain unambiguous results for the primary question of the trial which can support the safety and/or efficacy of the devices. However, conducting clinical trials is very time consuming and expensive, and risks found during clinical trials are very expensive to fix (\cite{trialcost}). 
+
+\textbf{To address this safety gap, new approaches for closed-loop validation of the device within the physiological context are needed - which is the primary focus of this article.}
 %Through the course of the 1980s, software began to play an increasing role in medical devices. Software, as it turns out, is one of those technologies not anticipated by prior regulation, and was waiting for its disaster to prompt regulatory action. It wasn't until the 1980s when a number of cancer patients received massive X-ray overdoses during radiation therapy with the Therac-25 linear accelerator. This lead to a number of investigations, perhaps the most thorough of which was that of \cite{therac}, which was rich with identified ways software could go wrong. Inadequate testing, dangerous code reuse, configuration management issues, inadequate manufacturer response, and failure to get to the root cause of the problem were among the leaders of the problems identified. The Therac-25 was an eye-opener for the FDA and legislators, and resulted in the Safe Medical Device Act of 1990. This finally required closer medical device tracking, post-market surveillance and recommendations on development, testing and validation of medical device software. \todo{Are these useful?}
 
 %\subsection{Pre-market Submission Process}
@@ -158,7 +162,7 @@ With the deluge of software-based closed-loop medical devices in the coming year
 		\label{fig:MDIC}
 \end{figure}
 
-As computational models of human physiology are developed, they can be used to interact with closed-loop medical devices or their models. The FDA is starting to recognize in silico modeling and simulation as regulatory-grade evidence for device safety and efficacy. For example, \cite{pancreas_paul} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, in part, which significantly reduced cost (\cite{pancreas}). With the increasing interest and recognition from the regulators, computer simulations are expected to play bigger role as safety and effectiveness evidence in the development of future closed-loop medical devices (\figref{MDIC}).
+As computational models of human physiology are developed, they can be used to interact with closed-loop medical devices or their models. The FDA is starting to recognize in-silico modeling and simulation as regulatory-grade evidence for device safety and efficacy. For example, \cite{pancreas_paul} developed glucose-insulin models that can be used to evaluate control algorithms for artificial pancreas devices which can sense blood glucose and deliver insulin. Simulation results with the models have been recognized by FDA to replace animal trials, in part, which significantly reduced cost (\cite{pancreas}). With the increasing interest and recognition from the regulators, computer simulations are expected to play bigger role as safety and effectiveness evidence in the development of future closed-loop medical devices (\figref{MDIC}).
 
 \section{Contributions}
 In this article, we use an implantable cardiac pacemaker as a working example to demonstrate how model-based design can help improve the safety and efficacy medical device software. We demonstrate the application of model-based design in several design activities during the development process, from the perspective of the manufacturer's design validation team. We assume availability of design artifacts including pacemaker design and physiological requirements. By demonstrating the process of developing verified models to generate verified code, the results of our model-based closed-loop evaluation should be able to support the device's safety and efficacy requirements during the regulation process.
