--- a/bibliography.bib
+++ b/bibliography.bib
@@ -27,7 +27,7 @@ year = {2011},
 
 @article{pancreas,
 title="{In Silico Preclinical Trials: A Proof of Concept in Closed-Loop Control of Type 1 Diabetes}",
-author="{Boris P. Kovatchev and Marc Breton and Chiara Dalla Man and Claudio Cobelli}",
+author="{B. P. Kovatchev and M. Breton and C. Dalla Man and C. Cobelli}",
 journal={Journal of Diabetes Science and Technology},
 volume={3},
 issue={1},
@@ -106,33 +106,26 @@ year={2015}
 }
 @article{cert_prob,
 	Author = {Pamela Elizabeth Scott},
-	Date-Added = {2015-04-19 02:07:07 +0000},
-	Date-Modified = {2015-04-19 02:08:38 +0000},
 	Journal = {PhD Dissertation, Johns Hopkins University},
 	Title = {Medical Device Approvals: An Assessment of The Level of Evidence},
 	Year = {2004}}
 
 @article{PMA,
 	Author = {U.S.Food and Drug Administration},
-	Date-Added = {2015-04-18 17:52:22 +0000},
-	Date-Modified = {2015-04-18 17:53:04 +0000},
 	Journal = {FDA 97-4214},
 	Title = {Premarket Approval Manual},
 	Year = {1998}}
 
 @article{510k,
 	Author = {U.S.Food and Drug Administration},
-	Date-Added = {2015-04-18 17:51:06 +0000},
-	Date-Modified = {2015-04-18 17:52:11 +0000},
 	Journal = {FDA 95-4158},
 	Title = {Premarket Notification 510(k): Regulatory Requirements for Medical Devices},
 	Year = {1995}}
 
 @article{class,
 	Author = {U.S.Food and Drug Administration},
-	Date-Added = {2015-04-18 17:37:58 +0000},
-	Date-Modified = {2015-04-18 17:50:46 +0000},
 	Title = {Classification of Medical Devices.},
+	Journal = {US FDA documents},
 	Year = {2014}}
 
 @article{Abstraction,
@@ -444,11 +437,13 @@ year={2015}
 	Journal = {Center for Devices and Radiological Health},
 	Title = {{Ensuring the Safety of Marketed Medical Devices: CDRH's Medical Device Postmarket Safety Program}},
 	Year = {2006}}
+	
 @article{recall_rep,
 	Author = {US FDA},
 	Journal = {Center for Devices and Radiological Health},
 	Title = {Medical Device Recall Report - FY2003 to FY2012},
 	Year = {2012}}
+
 @inproceedings{autosar,
   title={AUTOSAR--A Worldwide Standard is on the Road},
   author={F{\"u}rst, Simon and M{\"o}ssinger, J{\"u}rgen and Bunzel, Stefan and Weber, Thomas and Kirschke-Biller, Frank and Heitk{\"a}mper, Peter and Kinkelin, Gerulf and Nishikawa, Kenji and Lange, Klaus},
@@ -972,7 +967,9 @@ pages={396-411},
 	Year = {2000}}
 
 @misc{vhm_website,
-	Title = {{Virtual Heart Model website - http://medcps.org}}}
+	author = {Zhihao Jiang and Rahul Mangharam},
+	Title = {{Virtual Heart Model website - http://medcps.org}},
+	Year = {2016}}
 
 @book{timed-aut,
 	Author = {R. Alur},
@@ -1023,8 +1020,10 @@ pages={396-411},
 	Year = {2006}}
 
 @misc{stateflow,
+	author = {Mathworks, Inc.},
 	Howpublished = {{http://www.mathworks.com/help/toolbox/stateflow}},
-	Title = {{Matlab R2011a Documentation $\rightarrow$ Stateflow}}}
+	Title = {{Matlab R2011a Documentation $\rightarrow$ Stateflow}},
+	Year = {2016}}
 
 @article{pacemakertrends,
 author = {Greenspon, Arnold J. and et al},
